--- a/ToDoApp.Business/ToDoApp.Business.csproj
+++ b/ToDoApp.Business/ToDoApp.Business.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="8.0.0" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="7.1.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
   </ItemGroup>
 
   <ItemGroup>
