Authentication and SecuredOperations are added.

--- a/ToDoApp.DataAccess/ToDoApp.DataAccess.csproj
+++ b/ToDoApp.DataAccess/ToDoApp.DataAccess.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ToDoApp.Core\ToDoApp.Core.csproj" />
     <ProjectReference Include="..\ToDoApp.Entities\ToDoApp.Entities.csproj" />
   </ItemGroup>
 
